# AI_Customer_Support

./: .gitignore  README.md  project_overview.md  project_structure.md
ecommerce/backend/: initDb.js  package-lock.json  package.json  server.js
ecommerce/backend/config/: db.js
ecommerce/backend/data/: mockData.js
ecommerce/backend/middleware/: authMiddleware.js
ecommerce/backend/routes/: auth.js  chat.js  escalations.js  orders.js  products.js
ecommerce/frontend/: index.html
ecommerce/frontend/src/: App.jsx  index.css  main.jsx
ecommerce/frontend/src/components/: ChatWidget.css  ChatWidget.jsx  (+1 more)
my_app/: langgraph.json  main.py  pyproject.toml
my_app/agent/: agent.py  config.py  graph.py  persistence.py  router.py
my_app/agent/nodes/: guardrail_check.py  supervisor_post.py  supervisor_pre.py
my_app/agent/subgraphs/catalog/: filter_map.py  graph.py  nodes.py  state.py  tool.py
my_app/agent/subgraphs/general/: graph.py  nodes.py  state.py  tool.py
my_app/agent/subgraphs/knowledge/: graph.py  nodes.py  state.py  tool.py
my_app/agent/subgraphs/orders/: graph.py  nodes.py  state.py  tool.py
my_app/agent/utils/: model.py  prompts.py  state.py
my_app/agent/utils/knowledge/: db_writer.py  ingest.py  ingest_config.py  retriever.py
my_app/agent/utils/knowledge_RAG/: ingest.py  retriever.py
my_app/agent/utils/nodes/: customer_node.py  general_node.py  knowledge_node.py  product_node.py  reponse_node.py  supervisor_node.py
my_app/agent/utils/rag/: embedder.py  ingest.py  ingest_config.py  preprocessor.py  retriever.py
my_app/routes/: agent_api.py
(+10 files in other folders)
